--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ install:
   - make
 
 script: 
-  - source .venv/bin/activate && ofxstatement convert -t ingde test/input.csv test/output.ofx
+  - source .venv/bin/activate && ofxstatement convert -t ingde test/test.csv test/test.ofx
