--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ install:
 script:
   - source .venv/bin/activate
   - ofxstatement convert -t ingde test/test_with_saldo.csv test/test.ofx
+  - ! ofxstatement convert -t ingde test/test_without_saldo.csv test/test.ofx
