use proper unittest environment

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,4 @@ install:
   - make
 
 script:
-  - source .venv/bin/activate
-  - ofxstatement convert -t ingde test/test_with_saldo.csv test/test.ofx
-  - ! ofxstatement convert -t ingde test/test_without_saldo.csv test/test.ofx
+  - source .venv/bin/activate && python test/test_ingde.py
