--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,8 @@
             "name": "Python: ofxstatement",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/.venv/bin/ofxstatement",
+            "program": "${workspaceFolder}/test/test_ingde.py",
             "console": "integratedTerminal",
-            "args": ["convert", "-t", "ingde", "${workspaceFolder}/test/test.csv", "${workspaceFolder}/test/test.ofx"]
         }
     ]
 }
