add install step to github workflow

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,5 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       
+    - name: Install dependencies
+      run: python -m pip install virtualenv  
+
     - name: Run Tests
       run: make test
